@@ -44,7 +44,7 @@ enum {MANAGETOOLSMENUITEM=0xd000,TOOLNUMBER};
 enum {ABOUTMENUITEM=0xe000,ABOUTQTMENUITEM,HELPMENUITEM};
 
 enum	{AUTOINDENT=0,SHOWNUMS,WRAP,HIGHLIGHT,SYNTAXHILITE,USESINGLE,AUTOSAVE,NODUPLICATE,NOWARN,AUTOSHOW,BEKIND,MAXPREFSWIDGETS};
-enum {MAXTABCHARS=0,MAXHISTORY,MAXFUNCDEPTH,COMPLETIONSIZE,TABWIDTH,MENUWIDTH,MAXRECENTS,MSGCHECKTIME,MAXPREFSINTWIDGETS};
+enum {MAXTABCHARS=0,MAXHISTORY,MAXFUNCDEPTH,COMPLETIONSIZE,TABWIDTH,MENUWIDTH,MAXRECENTS,MSGCHECKTIME,MAXMENUSESSIONS,MAXPREFSINTWIDGETS};
 enum {FUNCTIONCOMBO=0,THEMECOMBO,FONTNAMECOMBO,PREFSTERMCOMMAND,PREFSPRINTCOMMAND,PREFSPAGESIZE,PREFSROOTCOMMAND,PREFSCURRENTFONT,BMHIGHLIGHTCOLOUR,CURRENTLINECOLOUR,SHORTCUTSCOMBO,MAXPREFSOTHERWIDGETS};
 
 enum {FINDNEXT=1,FINDPREV,FINDREPLACE};
@@ -604,6 +604,7 @@ class KKEditClass : public QObject
 
 	protected:
 	private:
+		int							maxSessions=24;
 //menu functions
 		void							clickMenu(QMenu *menu,QString name);
 		void							notDoneYet(QString string);
